[metadata]
name = gh_hugo_toolkit
version = 0.1.0
author = Alex Towell
author_email = lex@metafunctor.com
description = A tool to fetch GitHub repository data and render it for Hugo sites.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/queelius/gh_hugo_toolkit
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    requests
    pyyaml
    # add other dependencies here

[options.entry_points]
console_scripts =
    gh_fetch_user = gh_hugo_toolkit.gh_fetch_user:main
    gh_fetch_repo = gh_hugo_toolkit.gh_fetch_repo:main
    gh_hugo = gh_hugo_toolkit.gh_hugo:main
    gh_dash = gh_hugo_toolkit.gh_dash:main
