[metadata]
name = ghj
version = 0.1.0
author = Alex Towell
author_email = lex@metafunctor.com
description = A toolkit to work with GitHub repositories, generating JSON data and more
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/queelius/ghj
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    click>=8.0.0
    rich>=10.0.0
    requests
    pyyaml
    jmespath
    streamlit

[options.entry_points]
console_scripts =
    ghj = ghj.ghj_cli:main